# ibarra-iot-gateway

./: .env.example  .gitignore  README.md
.antigravity/: gema_v3_architecture_memory.json
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: ci.yml  main.yml
docker/: docker-compose-nhost.yml  docker-compose.yml  mosquitto.conf
docker/mosquitto/: mosquitto.conf
docs/: SECURITY.md  engram-supabase-sync.md
docs/adr/: 001-rv1106-toolchain-deferred.md  002-e2e-stress-test-deferred.md  003-vision-multi-head-pipeline.md
docs/hardware_specs/: 001-optical-capture.md  002-environmental-shielding.md
edge_nodes/norvi_monitor/: SECURITY.md  platformio.ini
edge_nodes/norvi_monitor/src/: EMAFilter.h  PayloadSerializer.h  main.cpp
edge_nodes/norvi_monitor/test/: test_main.cpp
edge_ops/ansible_provisioning/: HARDWARE_SECURITY.md  hardening.yml  hosts.ini
edge_ops/gateway_translator/: README.md  requirements.txt
edge_ops/gateway_translator/deploy/: gateway-translator.service  install.sh
edge_ops/gateway_translator/proto/: telemetry_pb2.py
edge_ops/gateway_translator/scripts/: build_protos.sh
edge_ops/gateway_translator/src/: hasura_client.py  main.py  mini_broker.py  mock_hasura.py  mqtt_worker.py  simulator.py  telemetry_pb2.py  test_resilience.py
edge_ops/gateway_translator/tests/: __init__.py  conftest.py  mini_broker.py  mock_hasura.py  simulator.py  test_resilience.py
edge_ops/gema_vision/: CMakeLists.txt  Dockerfile.build  Dockerfile.test  toolchain-arm-rockchip.cmake
edge_ops/gema_vision/benchmark/: benchmark_pipeline.cpp  benchmark_stages.h  main.cpp  mock_stages.cpp
edge_ops/gema_vision/deploy/: Dockerfile.systemd  README-FAT.md  config.json.example  fat_test.sh  fat_wdt_test.sh  gema-ota.service  gema-vision.env  gema-vision.service  grafana_dashboard.json  install.sh  test_restart.sh
edge_ops/gema_vision/include/: color_validator.hpp  config_manager.hpp  data_collector_engine.hpp  flash_trigger.hpp  frame_pool.hpp  inference_engine.hpp  inference_orchestrator.hpp  mock_engine.hpp  mock_flash_trigger.hpp  mock_video_producer.hpp  ocr_engine.hpp  ota_builtin_key.h  ota_manager.hpp  postproc_dispatcher.hpp  rga_video_producer.hpp  spatial_calibrator.hpp  telemetry_collector.hpp  thermal_monitor.hpp  thread_safe_queue.hpp  time_keeper.hpp  video_producer.hpp  visual_primitive.hpp  watchdog.hpp
edge_ops/gema_vision/scripts/calibration/: calibration_wizard.py
edge_ops/gema_vision/scripts/quantization/: Dockerfile.calibrate  README.md  calibrate.py
edge_ops/gema_vision/scripts/training/: dataset_gen.py  explore.md  lprnet.py  requirements.txt  rknn_convert.py  test_pipeline.py  train.py
edge_ops/gema_vision/src/: color_validator.cpp  config_manager.cpp  data_collector_engine.cpp  gema-hw-diag.cpp  inference_orchestrator.cpp  lprnet_ocr_engine.cpp  main.cpp  main_ota.cpp  ota_manager.cpp  postproc_dispatcher.cpp  spatial_calibrator.cpp  telemetry_collector.cpp  thermal_monitor.cpp  watchdog.cpp
edge_ops/gema_vision/test/: test_benchmark_collector.cpp  test_ota.cpp  test_telemetry.cpp  test_video_producer.cpp  test_vision_pipeline.cpp  test_watchdog.cpp
edge_ops/modbus_bridge/: .gitignore  CMakeLists.txt  Dockerfile.crossbuilder  build_in_docker.sh
edge_ops/modbus_bridge/cmake/: rv1106_toolchain.cmake
edge_ops/modbus_bridge/include/: IMQTTClient.hpp  ISerialPort.hpp  ModbusRTUMaster.hpp  TelemetryOrchestrator.hpp
edge_ops/modbus_bridge/proto/: telemetry.proto
edge_ops/modbus_bridge/src/: ModbusRTUMaster.cpp  TelemetryOrchestrator.cpp
edge_ops/modbus_bridge/test/: test_modbus.cpp  test_orchestrator.cpp
edge_ops/modbus_bridge/tests/: test_alert_engine.py  test_modbus_engine.cpp  test_protobuf_contract.cpp
edge_ops/modbus_bridge/tests/catch2/: catch_amalgamated.cpp  catch_amalgamated.hpp
hasura/metadata/databases/: databases.yaml
nhost/functions/alert-dispatcher/: engine.ts  index.ts  types.ts  utils.ts
nhost/functions/alert-healthbeat/: assert.ts  index.ts
nhost/functions/silence-detector/: engine.ts  index.ts
nhost/metadata/: cron_triggers.yaml  event_triggers.yaml
openspec/: config.yaml
openspec/archive/: video-producer-mock.md
openspec/changes/alert-engine-dynamic-rules/: design.md  spec.md  tasks.md  verify-report.md
openspec/changes/alert-engine-polymorphic-error-threshold/: design.md  spec.md  tasks.md  verify-report.md
openspec/changes/gateway-translator-bridge/: design.md  proposal.md  tasks.md
openspec/changes/modbus-bridge-infra/: archive-report.md  design.md  exploration.md  proposal.md  specs.md  tasks.md  verify-report.md
openspec/changes/norvi-ads1115-ema/: apply-progress.md  archive-report.md  proposal.md  specs.md  tasks.md  verify-report.md
openspec/changes/norvi-concurrent-skeleton/: archive-report.md  proposal.md  specs.md  tasks.md  verify-report.md
openspec/changes/norvi-deep-persistence/: apply-progress.md  archive-report.md  proposal.md  specs.md  tasks.md  verify-report.md
openspec/changes/norvi-network-ntp/: apply-progress.md  archive-report.md  proposal.md  specs.md  tasks.md  verify-report.md
openspec/changes/norvi-silicon-shield/: archive-report.md  proposal.md  specs.md  tasks.md  verify-report.md
openspec/changes/optical-capture-enhancement/: design.md  verify-report.md
openspec/changes/vision-pipeline-contracts/: apply-progress.md  archive-report.md  design.md  proposal.md  specs.md  tasks.md  verify-report.md
scripts/: generate_mtls_certs.sh
services/cloud_sync/: Dockerfile  cloud_sync.js  cloud_sync.test.js  package-lock.json  package.json
services/edge_worker/: Dockerfile  edge_worker.js  edge_worker.test.js  package-lock.json  package.json
services/system_monitor/: Dockerfile  package.json  system_monitor.js  system_monitor.test.js  system_monitor_logic.js
simulation/: Dockerfile  simulator.py  simulator_local.py
vision_edge/: CMakeLists.txt
vision_edge/src/: engine.cpp  engine.hpp  main.cpp  mqtt_client.cpp  mqtt_client.hpp  watchdog.cpp  watchdog.hpp
vision_edge/test/: engine_test.cpp  mqtt_mock_test.cpp
(+49 files in other folders)
